[Ops] Time for Majulah GCP Season 3

--- a/src/app/progression-tier/progression-tier.component.scss
+++ b/src/app/progression-tier/progression-tier.component.scss
@@ -2,6 +2,7 @@ $max-image-width: 150px;
 
 .progression-card {
     text-align: left;
+    height: calc(100% - 15px);
 }
 
 .progression-card-completed {
