--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <p>
     <mat-toolbar color="primary">
-        <span>Majulah GCP #2 - Progress Checker</span>
+        <span>Majulah GCP Season 3 - Progress Checker</span>
     </mat-toolbar>
 </p>
 <div class="response-body">
