--- a/src/app/results/results.component.html
+++ b/src/app/results/results.component.html
@@ -52,8 +52,8 @@
         <mat-card-header>
             <mat-card-title>What's this?</mat-card-title>
             <mat-card-subtitle>
-                This is a progress tracker built for tracking the progress for Majulah GCP #2, in terms of how far we are away from each tier of swags<br/><br/>
-                See more about this campaign <a href="https://events.withgoogle.com/majulahgcp-learn-data-analytics-using-google-cloud/" target="_blank">here</a><br/><br/>
+                This is a progress tracker built for tracking the progress for Majulah GCP Season 3, in terms of how far we are away from each tier of swags<br/><br/>
+                See more about this campaign <a href="https://events.withgoogle.com/majulahgcp-learn-infrastructure-and-app-dev-in-gcp/" target="_blank">here</a><br/><br/>
                 Simply copy your public profile link and paste it above!
             </mat-card-subtitle>
         </mat-card-header>
