--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <mat-card>
     <mat-form-field class="app-form-field">
-        <mat-label>Qwiklabs Profile Link</mat-label>
+        <mat-label>Qwiklabs Or Cloud Skills Boost Profile Link</mat-label>
         <input
             matInput
             type='text'
@@ -16,4 +16,5 @@
             Link is <strong>invalid</strong>
         </mat-error>
     </mat-form-field>
+    <br/>
 </mat-card>
