[Fix] Amend the event page quick link

--- a/src/app/results/results.component.html
+++ b/src/app/results/results.component.html
@@ -53,7 +53,7 @@
             <mat-card-title>What's this?</mat-card-title>
             <mat-card-subtitle>
                 This is a progress tracker built for tracking the progress for Majulah GCP Season 4, in terms of how far we are away from each tier of swags<br/><br/>
-                See more about this campaign <a href="https://goo.gle/majulahGCP/" target="_blank">here</a><br/><br/>
+                See more about this campaign <a href="https://goo.gle/majulahGCP" target="_blank">here</a><br/><br/>
                 Simply copy your public profile link and paste it above!
             </mat-card-subtitle>
         </mat-card-header>
